--- a/styles/app.css
+++ b/styles/app.css
@@ -1,9 +1,9 @@
 .card {
   float: left;
   border: solid 1px black;
-  width: 100px;
+  max-width: 100%;
   border-radius: 5px;
-  height: 140px;
+  height: auto;
   margin-right: 20px;
 }
 
